# insights-v1

./: .gitignore  README.md
.agent/rules/: insights-project.md
.agent/scripts/: init-insights.sh  new-expert.sh  verify-insights.sh
.agent/workflows/: agno-eval.md  agno-new-agent.md  build-fix.md  checkpoint.md  code-review.md  eval.md  github-cicd.md  insights-api.md  insights-build.md  insights-expert.md  insights-provider.md  insights-service.md  learn.md  orchestrate.md  pytest.md  refactor-clean.md  repo-init.md  vibe.md  (+5 more)
configs/: experts.yaml
docker/: Dockerfile.backend  Dockerfile.worker  docker-compose.yml
docs/: 00_MASTER_PLAN.md  01_REVISED_PLAN_RISK_DRIFT.md  02_REVISED_PLAN_DB.md  analyst_agent.py  manager_agent.py  risk_drift.py  secretary_agent.py
finbert/: Dockerfile  main.py  requirements.txt
python/: .env.example  main.py  pyproject.toml
python/insights/adapters/: sentiment.py
python/insights/adapters/db/: __init__.py  manager.py
python/insights/adapters/mcp/: __init__.py  client.py  toolkit.py
python/insights/adapters/models/: __init__.py  circuit_breaker.py  embedding.py  factory.py  interface.py  openrouter.py  siliconflow.py
python/insights/agents/orchestrator/: agent.py
python/insights/api/: main.py
python/insights/api/middleware/: auth.py
python/insights/api/routes/: analysis.py  stream.py
python/insights/core/: __init__.py  config.py  errors.py  events.py  logging.py  prompts.py  retry.py  types.py
python/insights/experts/: __init__.py  base.py  registry.py  risk.py
python/insights/experts/toolkits/: risk.py
python/insights/services/filing/: __init__.py  embedder.py  parser.py  text_chunker.py
python/insights/services/report/: __init__.py  generator.py
python/insights/services/risk/: __init__.py  drift_calculator.py  heat_scorer.py  zone_classifier.py
python/insights/services/risk_drift/: __init__.py  pipeline.py
python/insights/services/sentiment/: __init__.py  client.py  finbert_analyzer.py  hf_inference.py
python/insights/workers/: celery_app.py  tasks.py
python/tests/: conftest.py
python/tests/integration/: test_api.py  test_risk_drift_pipeline.py
python/tests/mocks/: mock_finbert.py
python/tests/unit/: test_api.py  test_core.py  test_db.py  test_expert_system.py  test_finbert.py  test_mcp_client.py  test_models.py  test_risk_drift_pipeline.py  test_services.py  test_workers.py
scripts/: item_1a_mcp_test_output.json  nvda_analysis_output.json  test_finbert.py  test_mcp_item_1a.py  test_nvda_risk_analysis.py  test_pipeline_staging.py
(+52 files in other folders)
